--- a/contents/3/dt.qmd
+++ b/contents/3/dt.qmd
@@ -12,7 +12,6 @@ We also print the labels and the feature names for our convenience.
 ```{python}
 from sklearn.datasets import load_iris
 import numpy as np
-from assests.codes.dt import gini, split, countlabels
 
 iris = load_iris()
 X = iris.data[:, 2:]
@@ -25,13 +24,145 @@ print(iris.feature_names)
 ```
 
 
-### Apply CART manually
+
+### Use package `sklearn`
+
+Now we would like to use the decision tree package provided by `sklearn`. The process is straightforward. The parameter `random_state=40` will be discussed {ref}`later<note-random_state>`, and it is not necessary in most cases.
+
+
+```{python}
+from sklearn.tree import DecisionTreeClassifier
+
+clf = DecisionTreeClassifier(random_state=40, min_samples_split=2)
+clf.fit(X, y)
+```
+
+
+`sklearn` provide a way to automatically generate the tree view of the decision tree. The code is as follows. 
+
+
+
+```{python}
+import matplotlib.pyplot as plt
+from sklearn.tree import plot_tree
+
+plt.figure(figsize=(3, 3), dpi=200)
+plot_tree(clf, filled=True, impurity=True, node_ids=True)
+```
+
+
+
+<details>
+<summary>Visualize decision boundary is optional.</summary>
+
+
+Similar to k-NN, we may use `sklearn.inspection.DecisionBoundaryDisplay` to visualize the decision boundary of this decision tree.
+
+
+
+```{python}
+from sklearn.inspection import DecisionBoundaryDisplay
+DecisionBoundaryDisplay.from_estimator(
+    clf,
+    X,
+    cmap='coolwarm',
+    response_method="predict",
+    xlabel=iris.feature_names[0],
+    ylabel=iris.feature_names[1],
+)
+
+# Plot the training points
+plt.scatter(X[:, 0], X[:, 1], c=y, s=15)
+```
+
+
+</details>
+
+
+### Tuning hyperparameters
+
+
+Building a decision tree is the same as splitting the training dataset. If we are alllowed to keep splitting it, it is possible to get to a case that each end node is pure: the Gini impurity is 0. This means two things:
+
+1. The tree learns too many (unnecessary) detailed info from the training set which might not be applied to the test set. This is called *overfitting*. We should prevent a model from overfitting.
+2. We could use the number of split to indicate the progress of the learning.
+
+In other words, the finer the splits are, the further the learning is. We need to consider some early stop conditions to prevent the model from overfitting.
+
+Some possible early stop conditions:
+
+- `max_depth`: The max depth of the tree. The default is `none` which means no limits.
+- `min_samples_split`: The minimum number of samples required to split an internal node. The default is 2 which means that we will split a node with as few as 2 elements if needed.
+- `min_samples_leaf`: The minimum number of samples required to be at a leaf node. The default is 1 which means that we will still split the node even if one subset only contains 1 element.
+
+If we don't set them (which means that we use the default setting), the dataset will be split untill all subsets are pure.
+
+
+
+::: {#exm-}
+# ALMOST all end nodes are pure
+
+In this example, we let the tree grow as further as possible. It only stops when (almost) all end nodes are pure, even if the end nodes only contain ONE element (like #6 and #11).
+
+```{python}
+clf = DecisionTreeClassifier(random_state=40)
+clf.fit(X, y)
+plt.figure(figsize=(3, 3), dpi=200)
+plot_tree(clf, filled=True, impurity=True, node_ids=True)
+```
+
+
+In this example there is one exception. #13 node is not pure. The reason is as follows.
+
+```{python}
+X[(X[:, 0]>0.8) & (X[:, 1] >1.75) & (X[:, 0]<=4.85)]
+```
+All the data points in this node has the same feature while their labels are different. They cannot be split further purely based on features.
+
+
+:::
+
+
+Therefore we could treat these hyperparameters as an indicator about how far the dataset is split. The further the dataset is split, the further the learning goes, the more details are learned. Since we don't want the model to be overfitting, we don't want to split the dataset that far. In this case, we could use the learning curve to help us make the decision.
+
+In this example, let us choose `min_samples_leaf` as the indicator. When `min_samples_leaf` is big, the learning just starts. When `min_samples_leaf=1`, we reach the far most side of learning. We will see how the training and testing accuracy changes along the learning process.
+
+
+```{python}
+from sklearn.model_selection import train_test_split
+import matplotlib.pyplot as plt
+
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15, random_state=42)
+num_leaf = list(range(1, 100))
+train_acc = []
+test_acc = []
+for i in num_leaf:
+    clf = DecisionTreeClassifier(random_state=42, min_samples_leaf=i)
+    clf.fit(X_train, y_train)
+    train_acc.append(clf.score(X_train, y_train))
+    test_acc.append(clf.score(X_test, y_test))
+plt.plot(num_leaf, train_acc, label='training')
+plt.plot(num_leaf, test_acc, label='testing')
+plt.gca().set_xlim((max(num_leaf)+1, min(num_leaf)-1))
+plt.legend()
+```
+
+From this plot, the accuracy has a big jump at `min_sample_leaf=41`. So we could choose this to be our hyperparameter.
+
+
+### Apply CART manually (optional)
+
+
+<details>
+<summary>The manual sample code is optional.</summary>
+
 
 We apply `split` to the dataset `S`. 
 
 
 
 ```{python}
+from assests.codes.dt import gini, split, countlabels
 r = split(S)
 if r['split'] is True:
     Gl, Gr = r['sets']
@@ -72,51 +203,8 @@ The decision we created so far can be described as follows:
    1. If it is, classify it as label `1` which is `versicolor`.
    2. If not, classify it as label `2` which is `virginica`.
 
-### Use package `sklearn`
 
-Now we would like to use the decision tree package provided by `sklearn`. The process is straightforward. The parameter `random_state=40` will be discussed {ref}`later<note-random_state>`, and it is not necessary in most cases.
-
-
-```{python}
-
-from sklearn import tree
-clf = tree.DecisionTreeClassifier(max_depth=2, random_state=40)
-clf.fit(X, y)
-```
-
-
-`sklearn` provide a way to automatically generate the tree view of the decision tree. The code is as follows. 
-
-
-
-```{python}
-import matplotlib.pyplot as plt
-plt.figure(figsize=(2, 2), dpi=200)
-tree.plot_tree(clf, filled=True, impurity=True)
-```
-
-
-Similar to k-NN, we may use `sklearn.inspection.DecisionBoundaryDisplay` to visualize the decision boundary of this decision tree.
-
-
-
-```{python}
-from sklearn.inspection import DecisionBoundaryDisplay
-DecisionBoundaryDisplay.from_estimator(
-    clf,
-    X,
-    cmap='coolwarm',
-    response_method="predict",
-    xlabel=iris.feature_names[0],
-    ylabel=iris.feature_names[1],
-)
-
-# Plot the training points
-plt.scatter(X[:, 0], X[:, 1], c=y, s=15)
-```
-
-
-### Analyze the differences between the two methods
+#### Analyze the differences between the two methods
 The tree generated by `sklearn` and the tree we got manually is a little bit different. Let us explore the differences here. 
 
 To make it easier to split the set, we could convert the `numpy.ndarray` to `pandas.DataFrame`.
@@ -172,7 +260,6 @@ So these two sets are really the same. The reason this happens can be seen from 
 
 So you can see that either way can give us the same classification. This means that given one dataset the construction of the decision tree might be random at some points.
 
-
 ::: {.callout-note}
 # note-random_state
 Since the split is random, when using `sklearn.DecisionTreeClassifier` to construct decision trees, sometimes we might get the same tree as what we get from our naive codes. 
@@ -198,3 +285,101 @@ print(df2a[1].min())
 Now you can see where the split number comes from. In our code, when we found a split, we will directly use that number as the cut. In this case it is `1.7`. 
 
 In `sklearn`, when it finds a split, the algorithm will go for the middle of the gap as the cut. In this case it is `(1.7+1.8)/2=1.75`. 
+
+</details>
+
+
+### Pruning
+Other than tuning hyperparameters, we also want to prune our tree in order to reduce overfitting further. The pruning algorithm introduced together with CART is called **Minimal-Cost-Complexity Pruning** (MCCP). 
+
+The idea is to use the cost-complexity measure to replace Gini impurity to grow the tree. The cost-complexity measure is gotten by adding the total number of end nodes with the coefficent `ccp_alpha` to the Gini impurity. The parameter `ccp_alpha>=0` is known as the **complexity parameter**, and it can help the tree to self-balance the number of end nodes and the Gini impurity.
+
+
+In `sklearn`, we use `cost_complexity_pruning_path` to help us find the effective alphas and the corresponding impurities. 
+
+```{python}
+clf = DecisionTreeClassifier(random_state=42)
+ccp_path = clf.cost_complexity_pruning_path(X_train, y_train)
+ccp_alphas, impurities = ccp_path.ccp_alphas, ccp_path.impurities
+```
+
+The list `ccp_alphas` contains all important `ccp_alpha`s. We could train a model for each of them. We could use the argument `ccp_alpha` to control the value when initialize the model. After we train all these tree models for each effective `ccp_alpha`, we evaluate the model and record the results.
+
+
+```{python}
+clfs = []
+for ccp_alpha in ccp_alphas:
+    clf = DecisionTreeClassifier(random_state=42, ccp_alpha=ccp_alpha)
+    clf.fit(X_train, y_train)
+    clfs.append(clf)
+
+node_counts = [clf.tree_.node_count for clf in clfs]
+depth = [clf.tree_.max_depth for clf in clfs]
+train_acc = [clf.score(X_train, y_train) for clf in clfs]
+test_acc = [clf.score(X_test, y_test) for clf in clfs]
+```
+We would like to visualize these info.
+
+```{python}
+fig, ax = plt.subplots(3, 1)
+ax[0].plot(ccp_alphas, node_counts, marker="o", drawstyle="steps-post")
+ax[0].set_xlabel("alpha")
+ax[0].set_ylabel("number of nodes")
+ax[1].plot(ccp_alphas, depth, marker="o", drawstyle="steps-post")
+ax[1].set_xlabel("alpha")
+ax[1].set_ylabel("depth of tree")
+ax[2].plot(ccp_alphas, train_acc, marker="o", drawstyle="steps-post", label='train')
+ax[2].plot(ccp_alphas, test_acc, marker="o", drawstyle="steps-post", label='test')
+ax[2].set_xlabel("alpha")
+ax[2].set_ylabel("accuracy")
+ax[2].legend()
+```
+Based on the plot, it seems that the fourth dot 0.01534424 is a good fit. So this is the complexity parameter we are going to use.
+
+
+
+<details>
+<summary>We could combine all the code above into a function.</summary>
+
+```{python}
+from sklearn.base import clone
+def eval_ccp_alphas(clf, X, y):
+    ccp_path = clf.cost_complexity_pruning_path(X, y)
+    ccp_alphas, impurities = ccp_path.ccp_alphas, ccp_path.impurities
+    clfs = []
+    for ccp_alpha in ccp_alphas:
+        clf_tmp = clone(clf)
+        clf_tmp.set_params(ccp_alpha=ccp_alpha)
+        clf_tmp.fit(X, y)
+        clfs.append(clf_tmp)
+
+    node_counts = [clf.tree_.node_count for clf in clfs]
+    depth = [clf.tree_.max_depth for clf in clfs]
+    train_acc = [clf.score(X_train, y_train) for clf in clfs]
+    test_acc = [clf.score(X_test, y_test) for clf in clfs]
+
+    fig, ax = plt.subplots(3, 1)
+    ax[0].plot(ccp_alphas, node_counts, marker="o", drawstyle="steps-post")
+    ax[0].set_xlabel("alpha")
+    ax[0].set_ylabel("number of nodes")
+    ax[1].plot(ccp_alphas, depth, marker="o", drawstyle="steps-post")
+    ax[1].set_xlabel("alpha")
+    ax[1].set_ylabel("depth of tree")
+    ax[2].plot(ccp_alphas, train_acc, marker="o", drawstyle="steps-post", label='train')
+    ax[2].plot(ccp_alphas, test_acc, marker="o", drawstyle="steps-post", label='test')
+    ax[2].set_xlabel("alpha")
+    ax[2].set_ylabel("accuracy")
+    ax[2].legend()
+
+    return ccp_alphas
+```
+
+
+```{python}
+eval_ccp_alphas(DecisionTreeClassifier(random_state=42), X_train, y_train)
+```
+
+
+</details>
+
+
