--- a/contents/3/project.qmd
+++ b/contents/3/project.qmd
@@ -46,9 +46,8 @@ CHOOSE ONE: Please apply the Decision Tree to one of the following datasets.
 
 Please answer the following questions.
 
-1. Please use grid search to find the good `max_leaf_nodes` and `max_depth`.
+1. Please find the best hyperparameters of your choice.
 2. Please record the accuracy (or cross-validation score) of your model and compare it with the models you learned before (kNN). 
 3. Please find the two most important features and explane your reason.
-4. (Optional) Use the two most important features to draw the Decision Boundary if possible.
 :::
 
