--- a/contents/6/project.qmd
+++ b/contents/6/project.qmd
@@ -7,7 +7,7 @@ Please hand write a report about the details of the math formulas for Logistic r
 :::
 
 
-
+<!-- 
 
 ::: {#exr-}
 CHOOSE ONE: Please use `sklearn` to apply the LogisticRegression to one of the following datasets. You may either use `LogisticRegression` or `SGDClassifier`.
@@ -21,13 +21,13 @@ Please in addition answer the following questions.
 1. What is your accuracy score?
 2. How many epochs do you use?
 3. Plot the learning curve (accuracy vs training sizes).
-:::
+::: -->
 
 
 
 ::: {#exr-}
 
-CHOOSE ONE: Please use `keras` to apply the LogisticRegression to one of the following datasets.
+CHOOSE ONE: Please use `PyTorch` to apply the LogisticRegression to one of the following datasets.
 
 - the `iris` dataset.
 - the dating dataset.
@@ -40,6 +40,4 @@ Please in addition answer the following questions.
 3. What is the batch size do you use?
 4. Plot the learning curve (loss vs epochs, accuracy vs epochs).
 5. Analyze the bias / variance status.
-
-
 :::
